--- a/static/style.css
+++ b/static/style.css
@@ -41,3 +41,6 @@
   .variables table th small {
     font-weight: normal;
     font-size: 0.8em; }
+
+.variables .form-group {
+  margin-bottom: 0px; }
